--- a/app/views/plant_instances/my_plants.html.erb
+++ b/app/views/plant_instances/my_plants.html.erb
@@ -20,7 +20,7 @@
               <% if @days == 0 %>
                 Today
               <% else %>
-                <%= @days %> Ago
+                <%= @days %> Days Ago
               <% end %>
             </span>
           <% end %>
