added sprout date to plant instance

--- a/app/views/plant_instances/_form.html.erb
+++ b/app/views/plant_instances/_form.html.erb
@@ -39,6 +39,10 @@
     <%= form.label :acquired_date %>
     <%= form.date_field :acquired_date %>
   </div>
+  <div class="field">
+    <%= form.label :sprout_date %>
+    <%= form.date_field :sprout_date %>
+  </div>
   
   <div class="actions">
     <%= form.submit %>
