Pull data from open farm

--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -23,7 +23,8 @@
 
 <p>
   <strong>Family:</strong>
-  <%= @family.name %>
+  <%= @family.name %><br/>
+  -acea, neuter plural of -aceus "belonging to, of the nature of"
 </p>
 
 <p>
