--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -60,6 +60,11 @@
     <%= form.text_field :image_url %>
   </div>
 
+  <div class="field">
+    <%= form.label :OpenFarmID %>
+    <%= form.text_field :OpenFarmID %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
