--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,3 +61,8 @@ a:hover {
     padding: 0.25em;
     background-color: #fffdf2;
 }
+
+.map {
+        height: 400px;
+        width: 100%;
+      }
