--- a/app/views/species/_form.html.erb
+++ b/app/views/species/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.collection_select :genus_id, Genu.all, :id, :name, :include_blank => true %>
   </div>
   
+  <div class="field">
+    <%= form.label :bbch_profile_id %>
+    <%= form.collection_select :bbch_profile_id, BbchProfile.all, :id, :name, :include_blank => true %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
