--- a/app/views/species/show.html.erb
+++ b/app/views/species/show.html.erb
@@ -47,5 +47,13 @@
   <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_species_path(@species) %> |
-<%= link_to 'Back', species_index_path %>
+<p>
+  <% if @species.bbch_profile_id != nil %>
+    BBCH Stages: <%= link_to @species.bbch_profile.name, @species.bbch_profile %>
+  <% end %>
+</p>
+
+<p>
+  <%= link_to 'Edit', edit_species_path(@species) %> |
+  <%= link_to 'Back', species_index_path %>
+</p>
