--- a/app/views/plant_instances/_form.html.erb
+++ b/app/views/plant_instances/_form.html.erb
@@ -17,13 +17,18 @@
   </div>
 
   <div class="field">
+    <%= form.label :reference_name %>
+    <%= form.text_field :reference_name %>
+  </div>
+
+  <div class="field">
     <%= form.label :location_id %>
     <%= form.collection_select :location_id, Location.all, :id, :name, :include_blank => true %>
   </div>
   
   <div class="field">
     <%= form.label :planted_date %>
-    <%= form.datetime_local_field :planted_date %>
+    <%= form.date_field :planted_date %>
   </div>
   
   <div class="field">
